Fri Mar  7 13:45:06 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Acceptor_Registry.h:
        * tao/Adapter_Registry.h:
        * tao/Cleanup_Func_Registry.h:
        * tao/Compression/zlib/ZlibCompressor_Factory.h:
        * tao/Condition.h:
        * tao/Connection_Handler.h:
        * tao/ObjectKey_Table.h:
        * tao/Transport.h:
        * tao/default_resource.h:
          Use ACE_UNIMPLEMENTED_FUNC instead of ACE_Copy_Disabled,
          the first maps to =delete with C++11 and results in a small
          footprint decrease

Fri Mar  7 13:31:56 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Transport.h:
          Use ACE_UNIMPLEMENTED_FUNC instead of ACE_Copy_Disabled,
          the first maps to =delete with C++11 and results in a small
          footprint decrease

        * tao/TransportCurrent/TC.idl:
          Doxygen improvements

Fri Feb 28 07:59:54 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Make x.2.5 public and prepare for next release

Fri Feb 28 08:46:21 CET 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO version 2.2.5 released.

Wed Feb 26 14:34:37 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Miop/McastHello/McastHello.cpp:
        * orbsvcs/tests/Miop/McastHello/client.cpp:
          Layout changes

        * orbsvcs/tests/Miop/McastHello/run_test.pl:
          Reduce the time we wait for a client, test looks to run
          fast, no need to wait more than 4 minutes on the client

        * tao/RTCORBA/RT_Current.cpp:
          Const change

Mon Feb 24 18:01:39 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/LiveCheck.cpp:
          Improve the handling of a timeout exception to identify a connection
          failure vs a timeout due to busy server.

          Also, optimize the scheduling of pings so that if a sufficiently close